# Aurelian

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: camera.h  ebo.h  engine.h  graphics.h  json_loader.h  map.h  map_basic_generator.h  map_generator.h  map_graphics.h  mesh.h  mesh_array.h  mesh_arrays.h  model.h  mouse_picker.h  shaders.h  statemanager.h  texture.h  utils.h  vao.h  vbo.h  vbo_arrays.h
include/glad/: glad.h
resource/shaders/: default.frag  default.vert  light.frag  light.vert  map.frag  map.vert
src/: camera.c  ebo.c  engine.c  glad.c  graphics.c  json_loader.c  main.c  map.c  map_basic_generator.c  map_generator.c  map_graphics.c  mesh.c  mesh_array.c  model.c  mouse_picker.c  shaders.c  statemanager.c  texture.c  utils.c  vao.c  vbo.c
